--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-03  Andreia Gaita <avidigal@novell.com> 
+
+	* gio/FileEnumerator.custom: Fix return statement
+
 2008-04-02  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* gio/metadata:
