--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-05-09  Stephane Delcroix  <sdelcroix@novell.com>
 
+	* gio/File.custom: adding the property to the interface too.
+
+2008-05-09  Stephane Delcroix  <sdelcroix@novell.com>
+
 	* gio/FileAdapter.custom: adding an Exists property.
 
 2008-05-09  Stephane Delcroix  <sdelcroix@novell.com>
