--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-10-27  Stephane Delcroix  <sdelcroix@novell.com>
 
+	* configure.in: bump the dependency on glib-sharp to 2.12.5, for the
+	ListBase fix.
+
+2008-10-27  Stephane Delcroix  <sdelcroix@novell.com>
+
 	* sample/TestAppInfo.cs: test app for AppInfo.
 
 2008-10-24  Stephane Delcroix  <sdelcroix@novell.com>
