--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-12-08  Stephane Delcroix  <sdelcroix@novell.com>
+
+	* gio/metadata: change Seekable.CanSeek from a method to a property 
+	accessor.
+
 2008-10-27  Stephane Delcroix  <sdelcroix@novell.com>
 
 	* configure.in: bump the dependency on glib-sharp to 2.12.6, for the
