Update for new release

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,13 @@
 ==========================
+Version 0.2 - Sept 1, 2010
+==========================
+
+Contributors:
+Gabriel Burt
+
+* Install .config file
+
+==========================
 Version 0.1 - Sept 1, 2010
 ==========================
 
